--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-json-to-mqtt",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Convert any JSON object to MQTT topic tree with configurable output formats",
   "keywords": [
     "node-red",
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/senselog/node-red-contrib-json-to-mqtt#readme",
   "node-red": {
+    "version": ">=3.0.0",
     "nodes": {
       "json-to-mqtt": "json-to-mqtt.js"
     }
